<resources>
    <string name="app_name">NYTimesSearch</string>
    <string name="action_settings">Settings</string>
    <string name="action_filter">Filter</string>
    <string name="hint">Enter search query</string>
    <string name="search">Search</string>
    <string name="sort_order">Sort Order</string>
    <string name="begin_date">Begin Date</string>
    <string name="checkbox_text">News Desk</string>
    <string name="checkbox_arts">Arts</string>
    <string name="checkbox_fashion">Fashion and Style</string>
    <string name="checkbox_sports">Sports</string>
    <string name="save">Save</string>
    <string name="title_activity_article">ArticleActivity</string>
</resources>
